--- a/src/server/ChatApp/appsettings.json
+++ b/src/server/ChatApp/appsettings.json
@@ -6,11 +6,26 @@
     }
   },
   "AllowedHosts": "*",
-  "KeycloakConfig": {
+  "KeycloakClientConfig": {
     "grant_type": "client_credentials",
     "client_id": "chatapp",
     "client_secret": "LKxpQPscUA542l86yBQwKfXdPkQFyMoF",
     "realm": "ChatApp",
-    "base_url": "http://localhost:8080"
+    "base_url": "http://localhost:8080",
+    "openid_configuration_url": "http://localhost:8080/realms/ChatApp/.well-known/openid-configuration"
+  },
+  "Keycloak": {
+    "realm": "ChatApp",
+    "auth-server-url": "http://localhost:8080/",
+    "resource": "chatapp",
+    "verify-token-audience": false,
+    "credentials": {
+      "secret": "LKxpQPscUA542l86yBQwKfXdPkQFyMoF"
+    },
+    "use-resource-role-mappings": true,
+    "confidential-port": 0,
+    "policy-enforcer": {
+      "credentials": {}
+    }
   }
 }
